tests/errors/lex_test28.kt
// This file contains an illegal token
set
